--- a/web_app/src/components/Search/search.scss
+++ b/web_app/src/components/Search/search.scss
@@ -6,7 +6,7 @@
     .search-drop-down{
         margin-bottom: 1rem;
         width:24vw ;
-        height: 50vh;
+        max-height: 50vh;
         overflow-y: auto;
         position: absolute;
         padding-left: 10px;
